apps/librespeed/deployment.yaml
# Source: librespeed/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
        - name: librespeed
          image: linuxserver/librespeed:5.5.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: libspeed-http
            - containerPort: 443
              name: libspeed-https
