apps/librespeed/service.yaml
# Source: librespeed/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
spec:
  selector:
    app: librespeed
  ports:
    - name: libspeed-http
      port: 80
    - name: libspeed-https
      port: 443
