apps/librespeed/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librespeed-httproute
  annotations:
    gethomepage.dev/href: "https://librespeed.home.alden.ai"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: LAN Speed Test to k8s nodes
    gethomepage.dev/group: Network
    gethomepage.dev/icon: librespeed.svg
    gethomepage.dev/app: librespeed # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Librespeed
    gethomepage.dev/pod-selector: ""
    # gethomepage.dev/weight: 10 # optional
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - librespeed.home.alden.ai
  rules:
  - backendRefs:
    - name: librespeed
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
